# chartplotter-cm93

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yml
cmake/: pack_release.cmake
sdk/: README.md  plugin_api.hpp  plugin_factory.hpp  projection.hpp
src/: cm93_chart_source.cpp  cm93_chart_source.hpp  cm93_decoder.cpp  cm93_decoder.hpp  cm93_dictionary.cpp  cm93_dictionary.hpp  cm93_plugin.cpp  cm93_plugin.hpp  cm93_plugin.json  cm93_plugin_factory.cpp
test/: test_cm93.cpp
